<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="180"-->
        <!--android:entries="@array/pref_sync_frequency_titles"-->
        <!--android:entryValues="@array/pref_sync_frequency_values"-->
        <!--android:key="sync_frequency"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_sync_frequency"/>-->

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
        <!--<intent android:action="android.settings.SYNC_SETTINGS"/>-->
    <!--</Preference>-->

    <cz.pfservis.hosys.activities.SoutezPreference
        android:key="@string/pref_soutez_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/pref_title_system_sync_soutez" />

    <cz.pfservis.hosys.activities.NumberPickerPreference
        android:key="pref_rozpis_pocet_dnu_dozadu"
        android:dialogTitle="@string/pref_rozpis_pocet_dnu_dozadu_title"
        android:title="@string/pref_rozpis_pocet_dnu_dozadu_title"
        android:summary="@string/pref_rozpis_pocet_dnu_dozadu_summary"
        android:defaultValue="7" />

    <cz.pfservis.hosys.activities.NumberPickerPreference
        android:key="pref_rozpis_pocet_dnu_dopredu"
        android:dialogTitle="@string/pref_rozpis_pocet_dnu_dopredu_title"
        android:title="@string/pref_rozpis_pocet_dnu_dopredu_title"
        android:summary="@string/pref_rozpis_pocet_dnu_dopredu_summary"
        android:defaultValue="21" />

</PreferenceScreen>
